Fix: TypeError: expected str, bytes or os.PathLike object, not NoneType

--- a/telegraf/templates/telegraf-extra-plugin.conf.j2
+++ b/telegraf/templates/telegraf-extra-plugin.conf.j2
@@ -1,4 +1,4 @@
-### MANAGED BY {{ role_path|basename }} ANSIBLE ROLE ###
+### MANAGED BY ANSIBLE ###
 
 [[inputs.{{ item.value.plugin | default(item.key) }}]]
 {% if item.value.interval is defined %}
