--- a/telegraf/templates/telegraf.conf.j2
+++ b/telegraf/templates/telegraf.conf.j2
@@ -1,4 +1,4 @@
-### MANAGED BY {{ role_path|basename }} ANSIBLE ROLE ###
+### MANAGED BY ANSIBLE ###
 
 [global_tags]
 {% if telegraf_global_tags is defined and telegraf_global_tags is iterable %}
