--- a/telegraf/templates/telegraf.service.j2
+++ b/telegraf/templates/telegraf.service.j2
@@ -1,4 +1,4 @@
-### MANAGED BY {{ role_path|basename }} ANSIBLE ROLE ###
+### MANAGED BY ANSIBLE ###
 [Unit]
 Description=Telegraf
 Documentation=https://github.com/influxdata/telegraf
